    behavior and more flexibility (includes [ticket:1537])

  - query.select_from() accepts multiple clauses to produce 
    multiple comma separated entries within the FROM clause.
    Useful when selecting from multiple-homed join() clauses.
    
  - the "dont_load=True" flag on Session.merge() is deprecated
    and is now "load=False".

  - many-to-one relations now fire off a lazyload in fewer
    cases, including in most cases will not fetch the "old"
    value when a new one is replaced.

  - added "make_transient()" helper function which transforms a
    persistent/ detached instance into a transient one (i.e.
    deletes the instance_key and removes from any session.)
    [ticket:1052]

  - the allow_null_pks flag on mapper() is deprecated, and 
    the feature is turned "on" by default.  This means that 
    a row which has a non-null value for any of its primary key
    columns will be considered an identity.  The need for this
    scenario typically only occurs when mapping to an outer join.
    [ticket:1339]
    
  - many-to-one "lazyload" fixes:
      - many-to-one relation to a joined-table subclass now
        uses get() for a simple load (known as the "use_get"
        condition), i.e. Related->Sub(Base), without the need
        to redefine the primaryjoin condition in terms of the
        base table. [ticket:1186]
      - specifying a foreign key with a declarative column,
        i.e. ForeignKey(MyRelatedClass.id) doesn't break the
        "use_get" condition from taking place [ticket:1492]

   - the mechanics of "backref" have been fully merged into the
     finer grained "back_populates" system, and take place entirely
     within the _generate_backref() method of RelationProperty.  This
     makes the initialization procedure of RelationProperty
     simpler and allows easier propagation of settings (such as from
     subclasses of RelationProperty) into the reverse reference. 
     The internal BackRef() is gone and backref() returns a plain 